components/21-atoms/link/_link.scss
$link-padding: .3em;

%a,
a {
  @include theme('color', 'color-primary', 'link-color');

  padding: $link-padding;
  transition: background-color .1s ease-in-out;
  font-weight: 600;
  text-decoration: underline;

  &:focus,
  &:hover {
    @include theme('background-color', 'color-primary--lighten-4', 'link-hover-background');
    @include theme('color', 'color-primary--darken-2', 'link-hover-color');
    border-radius: border-radius('radius-1');
  }

  &:focus {
    outline: thin dotted;
  }

  // Different button link types. These are links styled as a button.
  &.button {
    @include button;
    @include button-icon;
    // Overrule flex for IE
    align-items: flex-start;
    padding-top: .6em;
    text-decoration: none;

    &:not([class*="icon-"]) {
      @include button-icon;
      @include icon(arrow-right);
    }

    &[href^="http://"],
    &[href^="https://"] {
      @include button-icon;
      @include icon(external-link);
    }

    &[href^="mailto:"] {
      @include button-icon;
      @include icon(envelope);
    }

    &[download] {
      @include button-icon;
      @include icon(download);
    }

    &.button-success {
      @extend %button-success;
    }

    &.button-alert {
      @extend %button-alert;
    }

    &.button-dark {
      @extend %button-dark;
    }
  }

  &::after {
    transition: margin .1s ease-in;
    font-size: 1.5em;
    line-height: 1em;
    // For IE purposes first set underline, then remove it.
    text-decoration: underline;
    vertical-align: text-bottom;
  }

  &:not(.button)::after {
    margin-left: .2rem;
  }

  ///
  /// Styling of:
  ///   - standalone links
  ///   - links with an icon class on them
  ///   - links that go to an external source
  ///
  &.standalone-link,
  &[download]:not(.button),
  &[class^="icon-"],
  &[href^="http://"],
  &[href^="https://"] {
    display: inline-flex;
    align-items: center;
  }

  ///
  /// Stand alone links.
  ///
  &.standalone-link {
    @include icon(arrow-right, after);

    margin-left: 0;
    padding-left: 0;
    text-decoration: none;

    &:focus,
    &:hover {
      @include theme('color', 'color-primary--darken-2', 'link-hover-color');

      background-color: transparent;
    }
  }

  &.standalone-link:not([href^="mailto:"]):not([download]):not([href^="http://"]):not([href^="https://"]),
  &.button:not([href^="mailto:"]):not([download]):not([href^="http://"]):not([href^="https://"]):not([class*="icon-"]) {
    @extend %a-bounce-animation;
  }

  &[href^="mailto:"]:not(.button),
  &[download]:not(.button),
  &[href^="http://"]:not(.button),
  &[href^="https://"]:not(.button) {
    display: inline;

    &::after {
      display: inline-block;
      text-decoration: none;
      overflow: hidden; // Hides text decoration underline.
    }
  }

  ///
  /// Download links.
  ///
  &[download] {
    @include icon(download, after);
  }

  ///
  /// Mail links.
  ///
  &[href^="mailto:"] {
    @include icon(envelope, after);
  }

  ///
  /// External links get an indicator.
  ///
  &[href^="http://"],
  &[href^="https://"] {
    @include icon(external-link, after);

    &[download]:not(.button) {
      @include icon(download, after);
    }
  }
}

%a-bounce-animation {
  &::after,
  &::before {
    padding-right: .2rem;
  }

  &:focus,
  &:hover {
    &::after,
    &::before {
      animation: bounce 1s 2;

      // Animation causes pointer flickering in IE.
      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { // sass-lint:disable-line no-vendor-prefixes
        animation: none;
      }
    }
  }

  @keyframes bounce {
    0% {
      padding-right: .2rem;
      padding-left: 0;
    }

    40% {
      padding-right: 0;
      padding-left: .2rem;
    }

    100% {
      padding-right: .2rem;
      padding-left: 0;
    }
  }
}

%a-bounce-animation--left {
  &:focus,
  &:hover {
    &::after,
    &::before {
      animation: bounce-left 1s 2;

      // Animation causes pointer flickering in IE.
      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { // sass-lint:disable-line no-vendor-prefixes
        animation: none;
      }
    }
  }

  @keyframes bounce-left {
    0% {
      padding-right: .2rem;
      padding-left: .4rem;
    }

    40% {
      padding-right: .4rem;
      padding-left: .2rem;
    }

    100% {
      padding-right: .2rem;
      padding-left: .4rem;
    }
  }
}

///
/// External links other than group Ghent get an indicator.
///
%a-remove-indicator {
  &[href^="http://"],
  &[href^="https://"] {
    &[href*="stad.gent"] {
      &:not([download]):not(.standalone-link)::after {
        content: none;
      }

      ///
      /// Download links.
      ///
      &[download] {
        @include icon(download, after);
      }

      ///
      /// Stand alone links.
      ///
      &.standalone-link {
        @extend %a-bounce-animation;
        @include icon(arrow-right, after);
      }
    }
  }

  &.button {
    &[href^="http://"],
    &[href^="https://"] {
      &[href*="stad.gent"] {
        @extend %a-bounce-animation;
        @include icon(arrow-right);

        &::after {
          content: none;
        }
      }
    }
  }
}

